--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,7 @@
         "php": ">=5.3.3",
         "symfony/finder": "~2.1",
         "scan/kss-php": "1.*",
-        "twbs/bootstrap": "3.3.*",
-        "namelesscoder/fluid": "*",
-        "components/font-awesome": "4.*",
-        "components/jqueryui": "1.*"
+        "namelesscoder/fluid": "*"
     },
     "authors": [
         {
