Added UriUtility for generating links an qr codes

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "scan/kss-php": "1.*",
         "namelesscoder/fluid": "*",
         "zendframework/zend-cache": "2.5.*",
-        "zendframework/zend-serializer": "2.5.*"
+        "zendframework/zend-serializer": "2.5.*",
+        "endroid/qrcode": "^1.5"
     },
     "authors": [
         {
