--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "require": {
         "php": ">=5.3.3",
         "symfony/finder": "~2.1",
-        "scan/kss-php": "1.*",
+        "kss-php/kss-php": "2.0.*",
         "namelesscoder/fluid": "*",
         "zendframework/zend-cache": "2.5.*",
         "zendframework/zend-serializer": "2.5.*",
