--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": ">=5.3.3",
         "symfony/finder": "~2.1",
         "kss-php/kss-php": "2.0.*",
+        "twbs/bootstrap": "3.3.*",
         "namelesscoder/fluid": "*",
         "zendframework/zend-cache": "2.5.*",
         "zendframework/zend-serializer": "2.5.*",
@@ -29,5 +30,9 @@
         "psr-4": {
             "Thopra\\": "Classes/"
         }
+    },
+    "config": {
+        "bin-dir": "bin",
+        "vendor-dir": "Packages/Libraries"
     }
 }
