--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "symfony/finder": "~2.1",
         "kss-php/kss-php": "2.0.*",
         "twbs/bootstrap": "3.3.*",
-        "namelesscoder/fluid": "*",
+        "typo3fluid/fluid": "*",
         "zendframework/zend-cache": "2.5.*",
         "zendframework/zend-serializer": "2.5.*",
         "endroid/qrcode": "^1.5",
