Change dependency for symfony/finder so that newer versions can be used

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "license": "MIT",
     "require": {
         "php": ">=5.3.3",
-        "symfony/finder": "^2.1",
+        "symfony/finder": ">=2.1",
         "kss-php/kss-php": "2.0.*",
         "twbs/bootstrap": "3.3.*",
         "typo3fluid/fluid": "*",
